# BansheeRun

./: .gitignore  Cargo.toml  README.md  analysis_options.yaml  justfile  pubspec.yaml
.github/workflows/: ci.yml  release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
flutter_app/: README.md  pubspec.yaml
flutter_app/lib/: main.dart
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: app.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/: Package.swift  build-pkg.sh  build.sh
macos/BansheeRun/: ActivityListView.swift  ActivityRepository.swift  BansheeAudioManager.swift  BansheeLib.swift  BansheeRun-Bridging-Header.h  BansheeRunApp.swift  ContentView.swift  Info.plist  LocationManager.swift  banshee_run.h
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: banshee_api.rs  mod.rs  run_api.rs  simple.rs  stats_api.rs
rust/src/db/: mod.rs  schema.rs
rust/src/geo/: distance.rs  interpolation.rs  mod.rs  pace.rs
rust/src/models/: banshee.rs  gps_point.rs  mod.rs  run.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
src/: activity.rs  android.rs  banshee_session.rs  ghost_session.rs  lib.rs  macos.rs  pb_calculator.rs  personal_best.rs  point.rs  run_record.rs
test/: formatters_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+81 files in other folders)
