[package]
name = "banshee_run"
version = "0.1.0"
edition = "2021"
description = "A Rust core library for the BansheeRun running app - pacing logic and banshee comparisons"
license = "Apache-2.0"
repository = "https://github.com/ericcurtin/BansheeRun"

[lib]
name = "banshee_run"
# cdylib for Android .so, staticlib for iOS .a
crate-type = ["cdylib", "staticlib", "lib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[dev-dependencies]

[profile.release]
lto = true
opt-level = "z"
strip = true
